@@ -132,23 +132,21 @@ class PodcastManagerModelFeed extends JModelList
 
 		// Process user-entered filters for the HTML view
 		$params = $this->getState('params');
+		$filter = $this->getState('list.filter');
 
-		if ((is_object($params)) && ($params->get('filter_field') != 'hide') && ($filter = $this->getState('list.filter')))
+		if ((is_object($params)) && ($params->get('filter_field') != 'hide'))
 		{
 			// clean filter variable
 			$filter = $db->quote('%' . $db->escape(JString::strtolower($filter), true) . '%', false);
 
-			switch ($params->get('filter_field'))
-			{
-				case 'author':
-					$query->where('LOWER( a.itAuthor ) LIKE ' . $filter);
-					break;
+			// Check the author field
+			$query->where('a.itAuthor LIKE ' . $filter, 'OR');
 
-				case 'title':
-				default: // default to 'title' if parameter is not valid
-					$query->where('LOWER( a.title ) LIKE ' . $filter);
-					break;
-			}
+			// Check the podcast's title
+			$query->where('a.title LIKE ' . $filter, 'OR');
+
+			// Check the podcast's date
+			$query->where('a.publish_up LIKE ' . $filter, 'OR');
 		}
 
 		// Handle the list ordering.
