@@ -76,9 +76,7 @@
 				label="JGLOBAL_FILTER_FIELD_LABEL" >
 				<option value="">JGLOBAL_USE_GLOBAL</option>
 				<option value="hide">JHIDE</option>
-				<option value="title">JGLOBAL_TITLE</option>
-				<option value="date">JDATE</option>
-				<option value="author">JAUTHOR</option>
+                <option value="show">JSHOW</option>
 			</field>
 			<field name="show_pagination_limit" type="list"
 			label="JGLOBAL_DISPLAY_SELECT_LABEL"
