@@ -1,3 +1,6 @@
+15-January-2012 Michael Babker
+~ [#28] Make front end filtering field generic search
+
 11-January-2012 Michael Babker
 ~ Update Live Update to 1.1
 ~ Set filterable states for admin list views
